Fix: hide iframeinsert (causes scrollbar)

--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -118,3 +118,7 @@ body > div#navbar { padding-top: 0px; }
 	width: 2000px;
 	font-size: 18px;
 }
+
+#iframeinsert {
+	display: none;
+}
